[project]
name = "korapay-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
korapay-cli = "korapay_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
